--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,14 @@
             android:name=".activities.ChooseGameActivity"
             android:label="@string/title_activity_choose_game" >
         </activity>
+        <activity
+            android:name=".activities.ScratchGameActivity"
+            android:label="@string/title_activity_scratch_game"
+            android:parentActivityName=".activities.ChooseGameActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.finlayfamily.littlefamily.activities.ChooseGameActivity" />
+        </activity>
     </application>
 
 </manifest>
