--- a/LittleFamilyApp/src/main/AndroidManifest.xml
+++ b/LittleFamilyApp/src/main/AndroidManifest.xml
@@ -59,6 +59,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.finlayfamily.littlefamily.activities.ChooseGameActivity" />
         </activity>
+        <activity
+            android:name=".activities.HeritageDressUpActivity"
+            android:label="@string/title_activity_heritage_dress_up"
+            android:parentActivityName=".activities.ChooseGameActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.finlayfamily.littlefamily.activities.ChooseGameActivity" />
+        </activity>
     </application>
 
 </manifest>
