more person management changes

--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "org.finlayfamily.littlefamily"
+        applicationId "com.yellowforktech.littlefamilytree"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
