--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "com.yellowforktech.littlefamilytree"
         minSdkVersion 16
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionName "0.90"
+        versionCode 2
     }
     buildTypes {
         release {
@@ -20,6 +19,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+    productFlavors {
     }
 }
 
