--- a/LittleFamilyApp/src/main/AndroidManifest.xml
+++ b/LittleFamilyApp/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         <activity
-            android:name=".activities.SplashActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,123 +26,123 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ChooseFamilyMember"
+            android:name="com.yellowforktech.littlefamilytree.activities.ChooseFamilyMember"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".activities.FSLoginActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.FSLoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fslogin"
             android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
-            android:name=".activities.PGVLoginActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.PGVLoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_pgvlogin"
             android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
-            android:name=".activities.MatchGameActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.MatchGameActivity"
             android:label="@string/title_activity_match_game" >
         </activity>
         <activity
-            android:name=".activities.ChooseGameActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity"
             android:label="@string/title_activity_choose_game" >
         </activity>
         <activity
-            android:name=".activities.ScratchGameActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.ScratchGameActivity"
             android:label="@string/title_activity_scratch_game"
-            android:parentActivityName=".activities.ChooseGameActivity" >
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name=".activities.ColoringGameActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.ColoringGameActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_coloring_game"
-            android:parentActivityName=".activities.ChooseGameActivity"
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name=".activities.HeritageDressUpActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.HeritageDressUpActivity"
             android:label="@string/title_activity_heritage_dress_up"
-            android:parentActivityName=".activities.ChooseCultureActivity"
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseCultureActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseCultureActivity" />
         </activity>
         <activity
-            android:name=".activities.ChooseCultureActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.ChooseCultureActivity"
             android:label="@string/title_activity_choose_culture"
-            android:parentActivityName=".activities.ChooseGameActivity"
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name=".activities.ChooseRemoteService"
+            android:name="com.yellowforktech.littlefamilytree.activities.ChooseRemoteService"
             android:label="@string/title_activity_choose_remote_service" >
         </activity>
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name=".activities.PuzzleGameActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.PuzzleGameActivity"
             android:label="@string/title_activity_puzzle_game"
-            android:parentActivityName=".activities.ChooseGameActivity" >
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name=".activities.HomeActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.HomeActivity"
             android:label="@string/title_activity_home" >
         </activity>
         <activity
-            android:name=".activities.MyTreeActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.MyTreeActivity"
             android:label="@string/title_activity_my_tree"
-            android:parentActivityName=".activities.HomeActivity" >
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.HomeActivity" />
         </activity>
         <activity
-            android:name=".activities.BubblePopActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.BubblePopActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_bubble_pop"
-            android:parentActivityName=".activities.HomeActivity"
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.HomeActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.HomeActivity" />
         </activity>
         <activity
-            android:name=".activities.PersonSearchActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.PersonSearchActivity"
             android:label="@string/title_activity_person_search" >
         </activity>
         <activity
-            android:name=".activities.SongActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.SongActivity"
             android:label="@string/title_activity_song"
-            android:parentActivityName=".activities.HomeActivity"
+            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.HomeActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.HomeActivity" />
         </activity>
         <activity
-            android:name=".activities.ParentsGuideActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.ParentsGuideActivity"
             android:label="@string/title_activity_parents_guide" >
         </activity>
         <activity
-            android:name=".activities.FlyingActivity"
+            android:name="com.yellowforktech.littlefamilytree.activities.FlyingActivity"
             android:label="@string/title_activity_flying" >
         </activity>
     </application>
