--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -39,11 +39,16 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile files('libs/simple-xml-2.7.jar')
     compile files('libs/fs-android-1.0.jar')
     compile files('libs/android-jhlabs.jar')
