--- a/LittleFamilyApp/src/main/AndroidManifest.xml
+++ b/LittleFamilyApp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yellowforktech.littlefamilytree" >
+    package="com.yellowforktech.littlefamilytree">
 
     <uses-sdk android:minSdkVersion="15" />
 
@@ -15,10 +15,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.SplashActivity"
-            android:label="@string/app_name" >
+            android:name=".activities.SplashActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,125 +26,112 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ChooseFamilyMember"
+            android:name=".activities.ChooseFamilyMember"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.FSLoginActivity"
+            android:name=".activities.FSLoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fslogin"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.PGVLoginActivity"
+            android:name=".activities.PGVLoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_pgvlogin"
-            android:windowSoftInputMode="adjustResize" >
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.MatchGameActivity"
-            android:label="@string/title_activity_match_game" >
-        </activity>
+            android:name=".activities.MatchGameActivity"
+            android:label="@string/title_activity_match_game"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity"
-            android:label="@string/title_activity_choose_game" >
-        </activity>
+            android:name=".activities.ChooseGameActivity"
+            android:label="@string/title_activity_choose_game"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ScratchGameActivity"
+            android:name=".activities.ScratchGameActivity"
             android:label="@string/title_activity_scratch_game"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" >
+            android:parentActivityName=".activities.ChooseGameActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ColoringGameActivity"
+            android:name=".activities.ColoringGameActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_coloring_game"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity"
-             >
+            android:parentActivityName=".activities.ChooseGameActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.HeritageDressUpActivity"
+            android:name=".activities.HeritageDressUpActivity"
             android:label="@string/title_activity_heritage_dress_up"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseCultureActivity"
-            >
+            android:parentActivityName=".activities.ChooseCultureActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseCultureActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ChooseCultureActivity"
+            android:name=".activities.ChooseCultureActivity"
             android:label="@string/title_activity_choose_culture"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity"
-            >
+            android:parentActivityName=".activities.ChooseGameActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ChooseRemoteService"
-            android:label="@string/title_activity_choose_remote_service" >
-        </activity>
+            android:name=".activities.ChooseRemoteService"
+            android:label="@string/title_activity_choose_remote_service"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.SettingsActivity"
-            android:label="@string/title_activity_settings" >
-        </activity>
+            android:name=".activities.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.PuzzleGameActivity"
+            android:name=".activities.PuzzleGameActivity"
             android:label="@string/title_activity_puzzle_game"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" >
+            android:parentActivityName=".activities.ChooseGameActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.ChooseGameActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.HomeActivity"
-            android:label="@string/title_activity_home" >
-        </activity>
+            android:name=".activities.HomeActivity"
+            android:label="@string/title_activity_home"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.MyTreeActivity"
+            android:name=".activities.MyTreeActivity"
             android:label="@string/title_activity_my_tree"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.HomeActivity" >
+            android:parentActivityName=".activities.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.HomeActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.BubblePopActivity"
+            android:name=".activities.BubblePopActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_bubble_pop"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.HomeActivity"
-            >
+            android:parentActivityName=".activities.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.HomeActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.PersonSearchActivity"
-            android:label="@string/title_activity_person_search" >
-        </activity>
+            android:name=".activities.PersonSearchActivity"
+            android:label="@string/title_activity_person_search"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.SongActivity"
+            android:name=".activities.SongActivity"
             android:label="@string/title_activity_song"
-            android:parentActivityName="com.yellowforktech.littlefamilytree.activities.HomeActivity"
-            >
+            android:parentActivityName=".activities.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yellowforktech.littlefamilytree.activities.HomeActivity" />
         </activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.ParentsGuideActivity"
-            android:label="@string/title_activity_parents_guide" >
-        </activity>
+            android:name=".activities.ParentsGuideActivity"
+            android:label="@string/title_activity_parents_guide"></activity>
         <activity
-            android:name="com.yellowforktech.littlefamilytree.activities.FlyingActivity"
-            android:label="@string/title_activity_flying" >
-        </activity>
+            android:name=".activities.FlyingActivity"
+            android:label="@string/title_activity_flying"></activity>
+        <activity
+            android:name=".activities.MyHeritageLoginActivity"
+            android:label="@string/title_activity_my_heritage_login"></activity>
     </application>
 
 </manifest>
