freemium is on the way

--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -52,3 +52,5 @@ dependencies {
     compile files('libs/simple-xml-2.7.jar')
     compile files('libs/fs-android-1.0.jar')
 }
+
+apply plugin: 'com.google.gms.google-services'
