--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /.idea/libraries
 .DS_Store
 /build
+.idea/codeStyleSettings.xml
+.idea/runConfigurations.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
