--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -46,8 +46,11 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.google.android.gms:play-services:9.0.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile files('libs/simple-xml-2.7.jar')
     compile files('libs/fs-android-1.0.jar')
