--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     repositories {
-        jcenter()
+        //jcenter()
+        maven { url "http://jcenter.bintray.com" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
@@ -14,6 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        //jcenter()
+        maven { url "http://jcenter.bintray.com" }
     }
 }
