support Amazon purchases

--- a/LittleFamilyApp/src/main/AndroidManifest.xml
+++ b/LittleFamilyApp/src/main/AndroidManifest.xml
@@ -180,7 +180,7 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name="com.amazon.inapp.iap.ResponseReceiver">
+        <receiver android:name="com.amazon.device.iap.ResponseReceiver">
             <intent-filter>
                 <action android:name="com.amazon.inapp.purchasing.NOTIFY" android:permission="com.amazon.inapp.purchasing.Permission.NOTIFY">
                 </action>
