--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'Google Inc.:Google APIs:21'
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId "com.yellowforktech.littlefamilytree"
         minSdkVersion 15
@@ -48,19 +48,17 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:support-v4:23.2.0'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
     compile files('libs/simple-xml-2.7.jar')
     compile files('libs/fs-android-1.0.jar')
+    compile files('libs/in-app-purchasing-2.0.61.jar')
 }
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
