--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         versionName "2.0.0"
-        versionCode 200
+        versionCode 203
         multiDexEnabled true
     }
     buildTypes {
@@ -55,6 +55,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile files('libs/simple-xml-2.7.jar')
     compile files('libs/fs-android-1.0.jar')
     compile files('libs/in-app-purchasing-2.0.61.jar')
